--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -1,2 +1,39 @@
 server:
   port: 8760
+  servlet:
+    context-path:
+spring:
+  application:
+    name: gateway
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
+zuul:
+  host:
+    connect-timeout-millis: 10000
+    socket-timeout-millis: 60000
+  routes:
+    user:     #路由名称
+      path: /user/**
+      serviceId: user #微服务名称
+      strip-prefix: true
+      sensitiveHeaders:   #cookie
+      ignoredHeaders:    #头信息
+    auth:     #路由名称
+      path: /auth/**
+      serviceId: auth #微服务名称
+      strip-prefix: true
+      sensitiveHeaders:   #cookie
+      ignoredHeaders:    #头信息
+security:
+  oauth2:
+    client:
+       ##网关的地址
+      access-token-uri: http://localhost:8760/auth/oauth/token
+      user-authorization-uri: http://localhost:8760/auth/oauth/authorize
+      client-id: client
+      client-secret: 123456
+    resource:
+      user-info-uri: http://localhost:8760/auth/user
+      prefer-token-info: false
