--- a/web/src/main/resources/application.yml
+++ b/web/src/main/resources/application.yml
@@ -17,4 +17,16 @@ spring:
     encoding: utf-8
     mode: HTML5
     cache: false
-
+security:
+  oauth2:
+    client:
+       ##网关的地址
+      access-token-uri: http://localhost:8760/auth/oauth/token
+      user-authorization-uri: http://localhost:8760/auth/oauth/authorize
+      client-id: web
+      client-secret: www
+    resource:
+      user-info-uri: http://localhost:8760/auth/user
+      prefer-token-info: false
+    authorization:
+      check-token-access: http://localhost:8760/auth/oauth/check_token
