--- a/auth/src/main/resources/application.yml
+++ b/auth/src/main/resources/application.yml
@@ -3,3 +3,35 @@ server:
 spring:
   application:
     name: auth
+#数据源
+  datasource:
+      name: test
+      url: jdbc:mysql://localhost:3306/auth?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+      username: root
+      password: root
+      type: com.alibaba.druid.pool.DruidDataSource
+      driver-class-name: com.mysql.jdbc.Driver
+      druid:
+        filters: stat
+        maxActive: 20
+        initialSize: 1
+        maxWait: 60000
+        minIdle: 1
+        timeBetweenEvictionRunsMillis: 60000
+        minEvictableIdleTimeMillis: 300000
+        validationQuery: select 'x'
+        testWhileIdle: true
+        testOnBorrow: false
+        testOnReturn: false
+        poolPreparedStatements: true
+        maxOpenPreparedStatements: 20
+#redis配置
+  redis:
+      host: 127.0.0.1
+      port: 6379
+      jedis:
+        pool:
+          max-idle: 100
+          min-idle: 1
+          max-active: 1000
+      password: 123456
