--- a/web/pom.xml
+++ b/web/pom.xml
@@ -60,11 +60,11 @@
             <artifactId>spring-boot-starter-oauth2-client</artifactId>
             <version>2.2.5.RELEASE</version>
         </dependency>
-        <dependency>
+       <!-- <dependency>
             <groupId>org.springframework.security.oauth.boot</groupId>
             <artifactId>spring-security-oauth2-autoconfigure</artifactId>
             <version>2.0.0.RELEASE</version>
-        </dependency>
+        </dependency>-->
         <!--增加熔断器-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
