--- a/user/src/main/resources/application.yml
+++ b/user/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://39.102.34.165:8761/eureka/
 spring:
   application:
     name: user
