增加 用户单个删除 用户登录时间

--- a/user/src/main/resources/application.yml
+++ b/user/src/main/resources/application.yml
@@ -32,7 +32,7 @@ spring:
         maxOpenPreparedStatements: 20
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     show-sql: true
     database: mysql
 
