--- a/user/src/main/resources/application.yml
+++ b/user/src/main/resources/application.yml
@@ -32,7 +32,7 @@ spring:
         maxOpenPreparedStatements: 20
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     show-sql: true
     database: mysql
 
