--- a/sk/src/main/resources/application.yml
+++ b/sk/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8762
+  port: 8763
 
 eureka:
   client:
@@ -7,7 +7,7 @@ eureka:
       defaultZone: http://39.102.34.165:8761/eureka/
 spring:
   application:
-    name: user
+    name: sk
   #数据源
   datasource:
       name: test
@@ -40,4 +40,3 @@ spring:
   sleuth:
     sampler:
       probability: 0.5
-
