--- a/sk/src/main/resources/application.yml
+++ b/sk/src/main/resources/application.yml
@@ -2,6 +2,8 @@ server:
   port: 8763
 
 eureka:
+  instance:
+    prefer-ip-address: true
   client:
     serviceUrl:
       defaultZone: http://39.102.34.165:8761/eureka/
@@ -11,7 +13,7 @@ spring:
   #数据源
   datasource:
       name: test
-      url: jdbc:mysql://localhost:3306/abs?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Hongkong
+      url: jdbc:mysql://39.102.34.165:3306/abs?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Hongkong
       username: root
       password: root
       type: com.alibaba.druid.pool.DruidDataSource
