新增 跨服务文件上传下载功能 新增 文件回收站功能 新增 定时任务 清理7天前 磁盘文件和表数据

--- a/web/pom.xml
+++ b/web/pom.xml
@@ -72,6 +72,17 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-zipkin</artifactId>
         </dependency>
+        <!--feign 文件上传组件-->
+        <dependency>
+            <groupId>io.github.openfeign.form</groupId>
+            <artifactId>feign-form</artifactId>
+            <version>3.8.0</version>
+        </dependency>
+        <dependency>
+            <groupId>io.github.openfeign.form</groupId>
+            <artifactId>feign-form-spring</artifactId>
+            <version>3.8.0</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
