--- a/sk/src/main/resources/application.yml
+++ b/sk/src/main/resources/application.yml
@@ -42,3 +42,12 @@ spring:
   sleuth:
     sampler:
       probability: 0.5
+  boot:
+      admin:
+        client:
+          url: "http://39.102.34.165:8369"
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
