--- a/web/src/main/resources/application.yml
+++ b/web/src/main/resources/application.yml
@@ -24,6 +24,15 @@ spring:
   sleuth:
     sampler:
       probability: 0.5
+  boot:
+      admin:
+        client:
+          url: "http://39.102.34.165:8369"
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
 #security:
 #  oauth2:
 #    client:
