--- a/sk/pom.xml
+++ b/sk/pom.xml
@@ -49,6 +49,22 @@
             <artifactId>spring-boot-admin-starter-client</artifactId>
             <version>2.2.2</version>
         </dependency>
+        <!--数据导出-->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>3.11</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>3.11</version>
+        </dependency>
+        <!--redis-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis-reactive</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
