新增排炮查询

--- a/filec/src/main/resources/application.yml
+++ b/filec/src/main/resources/application.yml
@@ -46,6 +46,10 @@ spring:
     admin:
       client:
         url: "http://39.102.34.165:8369"
+  servlet:
+      multipart:
+        max-file-size: 10MB
+        max-request-size: 100MB
 management:
   endpoints:
     web:
